<resources>
    <string name="app_name">Wallet_App_Android</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="walletApp">Wallet App</string>
    <string name="login_account">Login to your account.</string>
    <string name="register_account">Register fastly and join us.</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthdate">Birthdate</string>
    <string name="back_to_login">Back To Login Page</string>
    <string name="fill_all_place">Fill all place.</string>

    <string name="login_successful">Login Successful</string>
    <string name="login_error">There is an error in login.</string>
    <string name="register_successful">Register successfully completed.</string>
    <string name="register_error">This email is already registered. Please login with this email.</string>
    <string name="register_error2">There is an error in register. Please try again later.</string>
    <string name="user_not_found">User not found.</string>

    <string name="card_holder_title">Card Holder</string>
    <string name="expires_title">Expires</string>
    <string name="cvv_title">CVV</string>
    <string name="balance_title">Balance: </string>
    <string name="amount_title">Amount: </string>

    <string name="my_cards">My Cards</string>
    <string name="add_card">Add Card</string>
    <string name="card">Card</string>

    <string name="card_type_visa">Visa</string>
    <string name="card_type_mastercard">MasterCard</string>
    <string name="card_type_maestro">Maestro</string>
    <string name="card_type_american_express">American Express</string>
    <string name="card_type_unionpay">UnionPay</string>
    <string name="card_type_diners_club">Diners Club</string>

    <string name="currency_try">TRY</string>
    <string name="currency_eur">EUR</string>
    <string name="currency_usd">USD</string>

    <string name="currency_try_tl">Turkish Lira</string>
    <string name="currency_eur_euro">Euro</string>
    <string name="currency_usd_dollar">US Dollar</string>

    <string name="balance">Balance</string>
    <string name="card_holder">Card Holder</string>
    <string name="card_type">Card Type</string>
    <string name="card_currency">Card Currency</string>
    <string name="create_card">Create Card</string>
    <string name="balance_not_zero_or_lower">Balance can not be zero or lower than zero.</string>
    <string name="card_created_successfully">The card created successfully!</string>
    <string name="card_created_failure">There is an error in creating card!</string>
    <string name="there_is_no_card">There is no card here. \n You can create your card from Add Card button.</string>
    <string name="there_is_no_card_money_transfer">You do not have any card. \n You should create a card to transfer money.</string>
    <string name="there_is_no_card_withdraw">You do not have any card. You should create a card to withdraw money.</string>
    <string name="there_is_no_card_pay_bill">You do not have any card. You should create a card to pay bill.</string>
    <string name="there_is_no_card_load_balance">You do not have any card. You should create a card to load balance.</string>
    <string name="there_is_no_card_random_payment">You do not have any card. You should create a card to random payment.</string>

    <string name="there_is_no_transaction">There is no transaction.</string>

    <string name="transactions_title">Transactions</string>
    <string name="all_transactions_title"> All Transactions</string>
    <string name="quick_shortcuts">Quick Shortcuts</string>
    <string name="withdraw_money_qs">Withdraw \n Money</string>
    <string name="withdraw_money">Withdraw Money</string>
    <string name="load_balance_qs">Load \n Balance</string>
    <string name="pay_bills_qs">Pay \n Bills</string>
    <string name="random_payment_qs">Random \n Payment</string>
    <string name="money_transfer">Money Transfer</string>
    <string name="view_all">View All</string>

    <string name="transaction_type_payment">Payment</string> <!-- Ödeme -->
    <string name="transaction_type_transfer">Money Transfer</string> <!-- Para Gönderme -->
    <string name="transaction_type_deposit">Deposit</string> <!-- Cüzdana Para Yükleme -->
    <string name="transaction_type_withdrawal">Withdrawal</string> <!-- Para Çekme -->
    <string name="transaction_type_bill_payment">Bill Payment</string> <!-- Fatura Ödeme -->

    <string name="iban_number">IBAN Number</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="description_label">Description: </string>
    <string name="send_money">Send Money</string>
    <string name="iban">IBAN</string>

    <string name="select_card_alert">Please select card to transfer money.</string>
    <string name="select_card_label">Select Card: </string>
    <string name="amount_cannot_be_lower_balance">Amount value can not be lower than balance value or zero.</string>
    <string name="transfer_successful">The money transfer successfully completed.</string>
    <string name="transfer_failure_amount_lower_than_zero">The transfer amount can not be lower than zero.</string>
    <string name="transfer_failure_invalid_iban_number">Receiver IBAN number is invalid. Please check it.</string>
    <string name="transfer_failure_different_currency">Receiver card currency is different from your card currency.</string>
    <string name="transfer_failure_failure_server">Failure server. Please try again later.</string>
    <string name="transfer_failure_onfailure_state">Fail in transfer process. Please try again later.</string>

    <string name="load_balance">Load Balance</string>
    <string name="load_balance_process_success">The balance is loading successfully.</string>
    <string name="load_balance_process_failure">The balance could not load. Try again.</string>

    <string name="withdraw_money_success">Your withdraw money operation completed successfully.</string>
    <string name="withdraw_money_failure">The withdraw money could not complete. Try again.</string>
    <string name="withdraw_money_failure_balance_lower_than_amount">The amount can not be lower than your card balance.</string>

    <string name="payment_bill_successful">The bill payment completed successfully.</string>
    <string name="payment_bill_failure">The bill payment could not complete.</string>
    <string name="payment_bill_failure_server">Failure server. Please try again later.</string>

    <string name="random_payment_successful">Your payment has been completed successfully.</string>
    <string name="random_payment_failure">The payment could not complete.</string>
    <string name="random_payment_failure_server">Failure server. Please try again later.</string>

    <string name="change_big">CHANGE</string>
    <string name="created_at">Created At</string>
    <string name="number_of_cards">Number of Cards</string>
    <string name="number_of_transaction">Number of Transactions</string>
    <string name="user_details">User Details</string>
    <string name="user_id">User ID</string>
    <string name="logout">Logout</string>
    <string name="transactions">Transactions</string>
    <string name="cards">Cards</string>

    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_confirm">Confirm Password</string>
    <string name="change_password">Change Password</string>

    <string name="password_doesnt_match">New password and confirm password does not match.</string>
    <string name="old_password_incorrect">Old password is incorrect.</string>
    <string name="password_change_success">Password changed successfully.</string>
    <string name="verify_your_code">Verify Your Code</string>
    <string name="verify_your_code_sent_email">We have sent a code to your email \n</string>
    <string name="verify">Verify</string>
    <string name="error">There is an error. Try again later.</string>


</resources>