<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".ui.fragment.moneyTransfer.MoneyTransferFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewMoneyTransferTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/roboto_flex"
            android:text="@string/money_transfer"
            android:textColor="@color/bg_white_2"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewMoneyTransferMyCardsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/my_cards"
            android:textColor="@color/bg_white_2"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewMoneyTransferNoCardAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/there_is_no_card_money_transfer"
                android:textAlignment="center"
                android:textColor="@color/bg_white_2"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewMoneyTransferMyCards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextTransferMoneyIbanNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/iban_number"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color" />

        <EditText
            android:id="@+id/editTextMoneyTransferAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/amount"
            android:inputType="number|numberDecimal"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color" />

        <EditText
            android:id="@+id/editTextMoneyTransferDescription"
            android:layout_width="match_parent"
            android:layout_height="212dp"
            android:layout_margin="8dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="200"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonSendMoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_1"
                android:text="@string/send_money" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>