<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/login_gradient"
    tools:context=".ui.fragment.login.RegisterFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@color/white_transparent"
            app:cardCornerRadius="30dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewRegisterAppTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/roboto_flex"
                    android:text="@string/walletApp"
                    android:textColor="@color/black"
                    android:textSize="36sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/textViewRegister2AppTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/roboto_flex"
                    android:text="@string/register_account"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:id="@+id/linearLayoutRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editTextRegisterFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16sp"
                        android:ems="10"
                        android:fontFamily="@font/roboto_flex"
                        android:hint="@string/first_name"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editTextRegisterLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16sp"
                        android:ems="10"
                        android:fontFamily="@font/roboto_flex"
                        android:hint="@string/last_name"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color"
                        android:textSize="16sp" />


                    <EditText
                        android:id="@+id/editTextRegisterEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16sp"
                        android:ems="10"
                        android:fontFamily="@font/roboto_flex"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editTextRegisterPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16sp"
                        android:ems="10"
                        android:fontFamily="@font/roboto_flex"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editTextRegisterBirthdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16sp"
                        android:clickable="true"
                        android:ems="10"
                        android:focusable="false"
                        android:fontFamily="@font/roboto_flex"
                        android:hint="@string/birthdate"
                        android:inputType="date"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color"
                        android:textSize="16sp" />


                    <Button
                        android:id="@+id/buttonRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16sp"
                        android:layout_marginBottom="8sp"
                        android:backgroundTint="@color/blue_1"
                        android:fontFamily="@font/roboto_flex"
                        android:text="@string/register"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <Button
                        android:id="@+id/buttonBackToLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:layout_marginBottom="16sp"
                        android:backgroundTint="@color/negative_red"
                        android:fontFamily="@font/roboto_flex"
                        android:text="@string/back_to_login"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="normal" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>