<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.fragment.login.ForgotPasswordChangePasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/bg_white_3"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|top"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextForgotPasswordChangePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:ems="10"
                    android:hint="@string/new_password"
                    android:inputType="text|textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />

                <EditText
                    android:id="@+id/editTextForgotPasswordChangePasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:ems="10"
                    android:hint="@string/new_password_confirm"
                    android:inputType="text|textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />


                <Button
                    android:id="@+id/buttonForgotPasswordChangePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:backgroundTint="@color/dark_green"
                    android:text="@string/change_password"
                    android:textColor="@color/bg_text_white_2" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>